--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "learningmern",
+	"name": "habit-tracking",
 	"version": "1.0.0",
 	"description": "GoalSetter App ",
 	"main": "server.js",
@@ -26,6 +26,7 @@
 		"mongoose": "^7.3.2"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.22"
+		"nodemon": "^3.0.1",
+		"tailwindcss": "^3.3.3"
 	}
 }
