--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-	"name": "habit-tracking",
-	"version": "1.0.0",
-	"description": "GoalSetter App ",
-	"main": "server.js",
-	"scripts": {
-		"test": "node backend/server.js",
-		"server": "nodemon backend/server.js",
-		"client": "npm start --prefix frontend"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/iiweby/LearningMern.git"
-	},
-	"author": "Daniel Paredes",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/iiweby/LearningMern/issues"
-	},
-	"homepage": "https://github.com/iiweby/LearningMern#readme",
-	"dependencies": {
-		"bcryptjs": "^2.4.3",
-		"colors": "^1.4.0",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
-		"express-async-handler": "^1.2.0",
-		"jsonwebtoken": "^9.0.1",
-		"mongodb": "^5.7.0",
-		"mongoose": "^7.3.2"
-	},
-	"devDependencies": {
-		"nodemon": "^3.0.1",
-		"tailwindcss": "^3.3.3"
-	}
+  "name": "habit-tracking",
+  "version": "1.0.0",
+  "description": "GoalSetter App ",
+  "main": "server.js",
+  "scripts": {
+    "test": "node backend/server.js",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server \" \"npm run client\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iiweby/LearningMern.git"
+  },
+  "author": "Daniel Paredes",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/iiweby/LearningMern/issues"
+  },
+  "homepage": "https://github.com/iiweby/LearningMern#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.6.4"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.1",
+    "tailwindcss": "^3.3.3"
+  }
 }
