--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/iiweby/LearningMern#readme",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -27,7 +28,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.6.4"
+    "mongoose": "^7.6.4",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
